<resources>
    <string name="app_name">fragement</string>
    <string name="simple_fragment">Simple Fragment</string>
    <string name="change_fragment">Change Fragment</string>
    <string name="this_is_fragment_test">this is simple fragment</string>
    <string name="this_is_fragment">this is fragment</string>
    <string name="fragment_one">fragment one</string>
    <string name="fragment_two">fragment two</string>
    <string name="first_fragment_label">hahahahha</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_first_change_fragment_using_button">this is first change fragment using button</string>
    <string name="this_is_second_change_fragment_using_button">this is second change fragment using button</string>
    <string name="view_pager">View pager</string>
    <string name="geeksforgeeks">Tab One</string>
    <string name="code_chef">Tab Two</string>
    <string name="leet_code">Tab Three</string>
    <string name="simple_slider">Simple Slider</string>
    <string name="slider_image">slider image</string>
    <string name="slide_title">Slide Title</string>
    <string name="dyamic_fragment">Dyamic Fragment</string>
    <string name="todo">TODO</string>
    <string name="send">send</string>
    <string name="select_a_icon">Select a Icon</string>
    <string name="radio_button_adapter">Radio Button Adapter</string>
</resources>