<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSimpleFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_fragment"/>
    <Button
        android:id="@+id/btnChangeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_fragment"/>
    <Button
        android:id="@+id/btnViewPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_pager"/>
    <Button
        android:id="@+id/btnSimpleSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_slider"/>
    <Button
        android:id="@+id/btnDyamicFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dyamic_fragment"/>
</LinearLayout>